[gd_scene load_steps=6 format=3 uid="uid://djavkcbpv8yhx"]

[ext_resource type="Script" path="res://assets/parallaxtest/cutscene_holder.gd" id="1_vo33i"]
[ext_resource type="Texture2D" uid="uid://b8pfr2g7jqkql" path="res://assets/parallaxtest/parallax_backgrounds/Parallax_Backgrounds_SnowyMountains/5.png" id="2_tykxv"]
[ext_resource type="Texture2D" uid="uid://lfk0qmjtjmn3" path="res://assets/parallaxtest/parallax_backgrounds/Parallax_Backgrounds_SnowyMountains/4.png" id="3_udu1k"]
[ext_resource type="Texture2D" uid="uid://1ayggq6txynv" path="res://assets/parallaxtest/parallax_backgrounds/Parallax_Backgrounds_SnowyMountains/3.png" id="4_fqnvw"]
[ext_resource type="Texture2D" uid="uid://ddmyt06kh82dp" path="res://assets/parallaxtest/parallax_backgrounds/Parallax_Backgrounds_SnowyMountains/2.png" id="5_l2ruw"]

[node name="CutsceneHolder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vo33i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer_par" type="Timer" parent="CanvasLayer"]

[node name="Container" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Container"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_tykxv")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Container"]
layout_mode = 2
offset_top = 160.0
offset_right = 1920.0
offset_bottom = 1240.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_udu1k")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Container"]
layout_mode = 2
offset_left = -400.0
offset_right = 1904.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_fqnvw")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Container"]
layout_mode = 2
offset_right = 2304.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5_l2ruw")
expand_mode = 1

[connection signal="timeout" from="CanvasLayer/Timer_par" to="." method="_on_timer_timeout"]
